ensure chevron SVGs rotate for collapse/expand

--- a/src/_styles/custom.scss
+++ b/src/_styles/custom.scss
@@ -46,6 +46,10 @@ a{
 	.colorMode-toggle {
 		margin-bottom: 0px;
 
+		label{
+			cursor: pointer;
+		}
+
 		input {
 			position: relative;
 			top:2px;
